# AdventOfCode

./: .gitignore  README.md  generate_day.py  pyproject.toml
2024/: day10.py  day11.py  day12.py  day13.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py
2025/: day1.py  day2.py  day3.py
