[tool.poetry]
name = "aoc24"
version = "0.1.0"
description = ""
authors = ["Eric Santiago <ericsantiago98@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
bs4 = "^0.0.2"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
