[tool.poetry]
name = "aoc24"
version = "0.1.0"
description = "Advent of Code 2024 solutions"
authors = ["Eric Santiago <ericsantiago98@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
bs4 = "^0.0.2"
requests = "^2.32.3"
tqdm = "^4.67.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
